syntax = "proto3";

package NUgc.NSchema.NOrgs;

import "kernel/ugc/proto/common/moderation.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Next field: 28
message TOrgFeedback {
    string FeedbackId = 1;

    // rating
    google.protobuf.UInt32Value RatingOverall = 2;
    google.protobuf.Timestamp RatingTime = 3;
    google.protobuf.BoolValue PublicRating = 4;
    google.protobuf.StringValue RatingAppType = 5;
    google.protobuf.StringValue RatingActivityType = 6;

    // review
    google.protobuf.StringValue ReviewOverall = 7;
    google.protobuf.Timestamp ReviewTime = 8;
    google.protobuf.BoolValue ReviewSkipped = 9;
    google.protobuf.StringValue ReviewAppType = 10;
    google.protobuf.StringValue ReviewActivityType = 11;

    google.protobuf.StringValue LastAppType = 12;

    TSignPrivacy.EType SignPrivacy = 13;

    google.protobuf.BoolValue HaveUsed = 14;
    google.protobuf.Timestamp HaveUsedTime = 26;

    google.protobuf.BoolValue NotInterested = 15;
    google.protobuf.BoolValue WouldUse = 16;
    google.protobuf.BoolValue AskMore = 17;
    google.protobuf.BoolValue PublicHidden = 18;

    // moderation and antifraud
    string ModeratedFeedbackId = 19;
    TModerationStatus.EType ModerationStatus = 20;
    repeated TModerationReason.EType ModerationReason = 21;
    google.protobuf.Timestamp ModerationTime = 22;
    google.protobuf.StringValue ModeratedReviewOverall = 27;
    bool Fraud = 23;
    bool Hidden = 24;
    string HiddenReason = 25;
}

message TSignPrivacy {
    enum EType {
        UNKNOWN = 0;
        NAME = 1;
        LOGIN = 2;
        ANONYMOUS = 3;
    }
}
